<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <item name="calendar_index" type="id" />
    <string name="app_name">时间表</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">53faecb1</string>    <!-- 53faecb1 -->
    <string name="rationale_ask_again">该应用没有这些权限可能无法正常运行，请在设置界面设置该应用权限。</string>
    <string name="crop__done" translatable="false">确认</string>
    <string name="crop__cancel" translatable="false" tools:ignore="ButtonCase">取消</string>
    <string name="crop__pick_error" translatable="false">No image sources available</string>
    <string name="crop__saving" translatable="false">Saving picture…</string>
    <string name="crop__wait" translatable="false">Please wait…</string>
    <string name="ok">确定</string>
    <!-- 左边页面 -->
    <string name="tuichu">退    出</string>
    <string name="tixing">提醒模式</string>
    <string name="jifenduihuan">积分兑换</string>
    <string name="bangzhu">帮    助</string>
    <string name="shezhi">设    置</string>
    <string name="fenxiangricheng">分享日程</string>
    <string name="buxianglingshezhi">不响铃设置</string>
    <string name="todayend">今日已结束</string>

    <!-- 时间表框架 -->
    <string name="fragment_timetable">日程</string>
    <string name="fragment_repeate">重复</string>
    <string name="fragment_found">发现</string>
    <string name="fragment_my">好友</string>
    <string name="fragment_send">发出</string>
    <!-- 时间表fragment -->
    <string name="timefragment_title">我的日程</string>
    <string name="timerepeat_title">重复事件</string>
    <string name="press_again_exit">再次点击，退出应用</string>
    <string name="add_friends">添加好友</string>
    <string name="addfocus">添加关注</string>
    <string name="my_friends">我的好友</string>
    <string name="setbackgroundname">更换背景</string>
    <!-- 刷新 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal"></string><!-- 查看更多 -->
    <string name="xlistview_footer_hint_ready"></string><!-- 松开载入更多 -->

    <string name="hour">:</string>
    <string name="minitue"></string>
    <!-- 好友消息发送 -->
    <string name="richeng">日程</string>
    <string name="yiqian">以前</string>
    <string name="chongfu">重复</string>
    <!-- ************************************************************ -->
    <string name="adapter_today_end">今天已结束</string>
    <string name="adapter_before_end">过期未结束</string>
    <!-- 重复fragment -->
    <string name="repeatfragment_title">重复事件</string>
    <string name="repeatfragment_every_day">每天</string>
    <string name="repeatfragment_every_week">每周</string>
    <string name="repeatfragment_every_month">每月</string>
    <string name="repeatfragment_every_year">每年</string>
    <string name="repeatfragment_important_day">重要日</string>
    <string name="adapter_issue">发给: </string>
    <string name="adapter_delete">删    除</string>
    <string name="adapter_batch_end">批量结束</string>
    <string name="adapter_shun">顺</string>
    <string name="adapter_today">今天</string>
    <string name="adapter_untask">待办</string>
    <string name="adapter_yesterday">昨天</string>
    <string name="adapter_has">天后</string>
    <string name="adapter_tomorrow">明天</string>
    <string name="adapter_twodayago">两天以前</string>
    <string name="adapter_inweek">一周以内</string>
    <string name="adapter_outweek">一周以后</string>
    <string name="adapter_over">天前</string>
    <string name="adapter_allday">全天</string>
    <string name="adapter_day">天</string>
    <string name="weburl">网页链接</string>
    <string name="daoqiguanliri">到期日管理</string>
    <string name="kuaijieshuru">快捷输入</string>
    <string name="yuyinshuru">语音输入</string>
    <string name="zidingyi">新建提醒</string>
    <string name="newdaiban">新建待办事项</string>
    <string name="changyong">常用提醒</string>
    <string name="cancle">取消</string>
    <string name="daojishitixing">到时提醒</string>
    <string name="xuanzechangyongyu">起床提醒</string>
    <!-- 显示设置 -->
    <string name="showset_title">显示设置</string>
    <string name="showset_voice">智能语音录入</string>
    <string name="showset_alarm">桌面弹出窗口提醒</string>
    <!-- 星期 -->
    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <!-- 星期 -->
    <string name="mysunday">星期日</string>
    <string name="mymonday">星期一</string>
    <string name="mytuesday">星期二</string>
    <string name="mywednesday">星期三</string>
    <string name="mythursday">星期四</string>
    <string name="myfriday">星期五</string>
    <string name="mysaturday">星期六</string>
    <!-- 时间表fragment -->
    <string name="newfragment_title">新建日程</string>
    <!-- 新建日程 -->
    <string name="new_build_save">保存</string>
    <string name="new_build_finish">完成</string>
    <string name="new_build_hint">提醒做什么？</string>
    <!-- 个人信息 -->
    <string name="personmessage">个人信息</string>
    <string name="guoqiweijieshu">过期未结束</string>
    <string name="xinjianricheng">新建日程</string>
    <string name="everydayrepeat">每天重复</string>
    <string name="repeatdatetype">重复类型</string>
    <string name="zhuce">注册</string>
    <string-array name="before_time">
        <item>准时提醒</item>
        <item>5-分钟</item>
        <item>15-分钟</item>
        <item>30-分钟</item>
        <item>1-小时</item>
        <item>2-小时</item>
        <item>1-天</item>
        <item>2-天</item>
        <item>1-周</item>
    </string-array>
    <string-array name="monthStr">
        <item>正月</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>冬月</item>
        <item>腊月</item>
    </string-array>
    <string-array name="lunarstr">
        <item>初一</item>
        <item>初二</item>
        <item>初三</item>
        <item>初四</item>
        <item>初五</item>
        <item>初六</item>
        <item>初七</item>
        <item>初八</item>
        <item>初九</item>
        <item>初十</item>
        <item>十一</item>
        <item>十二</item>
        <item>十三</item>
        <item>十四</item>
        <item>十五</item>
        <item>十六</item>
        <item>十七</item>
        <item>十八</item>
        <item>十九</item>
        <item>二十</item>
        <item>廿一</item>
        <item>廿二</item>
        <item>廿三</item>
        <item>廿四</item>
        <item>廿五</item>
        <item>廿六</item>
        <item>廿七</item>
        <item>廿八</item>
        <item>廿九</item>
        <item>三十</item>
        <item>三十一</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>

    <string-array name="months">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="lunarday">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="number">
        <item>三十一</item>
        <item>三十</item>
        <item>二十九</item>
        <item>二十八</item>
        <item>二十七</item>
        <item>二十六</item>
        <item>二十五</item>
        <item>二十四</item>
        <item>二十三</item>
        <item>二十二</item>
        <item>二十一</item>
        <item>二十</item>
        <item>十九</item>
        <item>十八</item>
        <item>十七</item>
        <item>十六</item>
        <item>十五</item>
        <item>十四</item>
        <item>十三</item>
        <item>十二</item>
        <item>十一</item>
        <item>十</item>
        <item>九</item>
        <item>八</item>
        <item>七</item>
        <item>六</item>
        <item>五</item>
        <item>四</item>
        <item>三</item>
        <item>二</item>
        <item>一</item>
    </string-array>
    <string name="refresh_down_text">下拉可刷新</string>
    <string name="refresh_release_text">松开可刷新</string>
    <string name="action_clip">裁剪</string>
    <string name="msg_camera_invalid_permission_denied">无法打开相机，可能是权限被拒绝</string>
    <string name="msg_camera_invalid_initial_failed">相机初始化失败，无法打开相机</string>
    <string name="msg_camera_invalid_unknown_error">无法打开相机，未知错误</string>
    <string name="msg_could_not_save_photo">无法保存图片</string>
    <string name="msg_clipping_image">正在裁剪图片</string>

    <string name="mysendtask">我发出的任务</string>
</resources>
