<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:gravity="center" 
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <android.support.v4.app.FragmentTabHost
            android:id="@android:id/tabhost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#b2b2b2" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <FrameLayout
                    android:id="@+id/realtabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/main_radiogroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="#FCFCFC"
                android:padding="2dip" >

                <RadioButton
                    android:id="@+id/RadioButton0"
                    style="@style/tab_item_background"
                    android:drawableTop="@mipmap/btn_richeng1"
                    android:text="@string/fragment_timetable" />

                <RadioButton
                    android:id="@+id/RadioButton1"
                    style="@style/tab_item_background"
                    android:drawableTop="@mipmap/btn_chongfu2"
                    android:text="@string/fragment_repeate" />

                <RadioButton
                    android:id="@+id/RadioButton2"
                    style="@style/tab_item_background"
                    android:drawableTop="@mipmap/btn_faxian2"
                    android:text="@string/fragment_found" />

                <RadioButton
                    android:id="@+id/RadioButton3"
                    style="@style/tab_item_background"
                    android:drawableTop="@mipmap/btn_haoyou2"
                    android:text="@string/fragment_my" />

            </RadioGroup>
        </android.support.v4.app.FragmentTabHost>
    </LinearLayout>

</LinearLayout>