<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@android:id/tabhost"
    android:background="@color/bg_color"
    android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >
            <include layout="@layout/activity_basehead"/>
            <View android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/bg_color"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp" 
                android:orientation="horizontal"
                android:background="@color/white">
				<TextView android:id="@+id/chongfu_tv"
				    android:layout_width="0dp"
				    android:layout_height="match_parent"
				    android:layout_weight="1"
				    android:gravity="center"
				    android:text="@string/chongfu"
				    android:textSize="16sp"/>
				<TextView android:id="@+id/richeng_tv"
				    android:layout_width="0dp"
				    android:layout_height="match_parent"
				    android:layout_weight="1"
				    android:gravity="center"
				    android:text="@string/richeng"
				    android:textSize="16sp"/>
				<TextView android:id="@+id/yiqian_tv"
				    android:layout_width="0dp"
				    android:layout_height="match_parent"
				    android:layout_weight="1"
				    android:gravity="center"
				    android:text="@string/yiqian"
				    android:textSize="16sp"/>
            </LinearLayout>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:background="@color/bg_color" >
            </FrameLayout>

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

        </LinearLayout>
    </TabHost>
