<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/zidingyi_tv"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/zidingyi"
                android:textColor="@color/sunday_txt"
                android:textSize="@dimen/dialog_size" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc" />

            <RelativeLayout
                android:id="@+id/yuyin_rl"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/yuyin_tv"
                    android:src="@mipmap/icon_xiaohuatong2" />

                <TextView
                    android:id="@+id/yuyin_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/yuyinshuru"
                    android:textSize="@dimen/dialog_size" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc" />

            <TextView
                android:id="@+id/newdaiban_tv"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/newdaiban"
                android:textSize="@dimen/dialog_size" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#dcdcdc" />

            <TextView
                android:id="@+id/changyong_tv"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/changyong"
                android:textSize="@dimen/dialog_size" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:background="#dcdcdc" />

            <TextView
                android:id="@+id/canel_tv"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="取消"
                android:textSize="@dimen/dialog_size" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>