<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools" 
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/member_relative"
                android:layout_width="fill_parent"
                android:layout_height="match_parent" >
            </ImageView>

            <TextView
                android:id="@+id/tv_memberlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:shadowColor="@color/white"
                android:shadowDx="10"
                android:shadowDy="10"
                android:singleLine="true"
                android:text="个人中心"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <!-- <RelativeLayout
                android:id="@+id/img_rl"
                android:layout_width="90dp"
                android:layout_height="90dp"
                
                 > -->

                <!-- <com.mission.schedule.view.CircleImageView
                    android:id="@+id/image_img"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_alignParentLeft="true"
               		android:layout_marginLeft="10dp"
                   	app:border_width="2dp"
      				app:border_color="@color/white">
                </com.mission.schedule.view.CircleImageView> -->
                <com.mission.schedule.circleview.CircularImage
                    android:id="@+id/image_img"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentLeft="true"
               		android:layout_marginLeft="10dp"
               		  />
           <!--  </RelativeLayout> -->
            <!-- android:background="@drawable/bg_lefttouxiang" -->
            <!-- 没有指定圆形ImageView属性时，默认没有外边圆颜色 -->
            <!-- 需要将图片资源自定为src ，或在程序中setImageResource(res) 不能设置background为图片，这样不能达到圆形效果 -->
            <!--
         <com.dxd.roundimageview.RoundImageView   
        android:layout_width="100dp"  
        android:layout_height="100dp"  
        android:src="@drawable/img"  
        />
            -->
            <!-- border_outside_color 外部圆圈的颜色 -->
            <!-- border_inside_color 内部部圆圈的颜色 -->
            <!-- border_thickness 外圆和内圆的宽度 -->
            <!--
         <com.dxd.roundimageview.RoundImageView   
        android:layout_width="100dp"  
        android:layout_height="100dp"  
        android:src="@drawable/img"  
        imagecontrol:border_inside_color="#bc0978"  
        imagecontrol:border_outside_color="#ba3456"  
        imagecontrol:border_thickness="1dp"  
        />
            -->

            <LinearLayout
                android:id="@+id/tixing_ll"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/left_menu_heigth"
                android:layout_below="@+id/image_img"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/tixing_btn"
                    style="@style/item_left"
                    android:layout_width="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@mipmap/icon_tixinglingsheng"
                    android:text="@string/tixing" />

                <TextView
                    android:id="@+id/tixingname_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="语音"
                    android:textColor="@color/mingtian_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginRight="40dp"
                android:layout_below="@+id/tixing_ll"
                android:background="@color/left_view" />

            <LinearLayout
                android:id="@+id/todayend_ll"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/left_menu_heigth"
                android:layout_below="@+id/view1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/todayend_bt"
                    style="@style/item_left"
                    android:layout_width="wrap_content"
                    android:background="@null"
                    android:drawableLeft="@mipmap/btn_gou"
                    android:text="@string/todayend" />

                <TextView
                    android:id="@+id/hidden_tv"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:text="显示"
                    android:textColor="@color/mingtian_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginRight="40dp"
                android:layout_below="@+id/todayend_ll"
                android:background="@color/left_view" />

            <Button
                android:id="@+id/jifenduihuan_btn"
                style="@style/item_left"
                android:layout_below="@+id/view"
                android:background="@null"
                android:drawableLeft="@mipmap/icon_jifen"
                android:text="@string/jifenduihuan" />

            <View
                android:id="@+id/view2"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginRight="40dp"
                android:layout_below="@+id/jifenduihuan_btn"
                android:background="@color/left_view" />

            <Button
                android:id="@+id/set_btn"
                style="@style/item_left"
                android:layout_below="@+id/view2"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:drawableLeft="@mipmap/icon_shezhi"
                android:text="@string/shezhi" />

            <View
                android:id="@+id/view3"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginRight="40dp"
                android:layout_below="@+id/set_btn"
                android:background="@color/left_view" />

            <RelativeLayout
                android:id="@+id/help_rl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/left_menu_heigth"
                android:layout_below="@+id/view3" >

                <Button
                    android:id="@+id/help_btn"
                    style="@style/item_left"
                    android:layout_width="match_parent"
                    android:background="@null"
                    android:drawableLeft="@mipmap/icon_bangzhu"
                    android:text="@string/bangzhu" />

               <!--  <TextView
                    android:id="@+id/notification_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/help_btn"
                    android:gravity="center_vertical"
                    android:text="重要通知"
                    android:textColor="@color/sunday_txt"
                    android:textSize="16sp" /> -->
            </RelativeLayout>

            <View
                android:id="@+id/view4"
                android:layout_width="fill_parent"
                android:layout_height="0.5dp"
                android:layout_marginRight="40dp"
                android:layout_below="@+id/help_rl"
                android:background="@color/left_view" />

            <Button
                android:id="@+id/exit_btn"
                style="@style/item_left"
                android:layout_below="@+id/view4"
                android:background="@null"
                android:drawableLeft="@mipmap/icon_tuichu"
                android:text="@string/tuichu" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>